--- a/index.html
+++ b/index.html
@@ -4,22 +4,29 @@
 <head>
   <meta charset="utf-8">
   <title>Tithonia the band</title>
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
-  <table cellspacing = '30'>
+  <table cellspacing='30'>
     <tr>
-      <td>  <img src="https://am4pap001files.storage.live.com/y4mTfCZYt77TmYoUyqAsDYZFxIVGUTHkzQTgX2HUOMOXw0itcKuUOqzPd7ldYlJ8sxoGDD2PIi0n5OqWtzR55k8YRvOoBs8rW5C4vaKvvwIys2UwtjyZ3D2UC7lC-IdSACj1mtjH2mf_4LRoF-NClm6x2-vvp6hsVe2x758cMfYuitZPJXlhjSQUqFmUiaLlCWk?width=256&height=171&cropmode=none" alt="tithonia flower picture"></td>
-      <td><h1>Tithonia</h1>
-      <p><em><a href="https://www.youtube.com/channel/UC-xwVzo2SY78gDS11nHiCMw">Song writer</a>, <strong><a href="https://www.instagram.com/tithonia.band/">singer</a></strong> and rhythm <strong>guitar</strong> <a
-            href="https://www.youtube.com/watch?v=Is0YVJeB0DI">player</a></em></p>
-      <p> In a band with <strong><a href="https://www.instagram.com/_uncle_dyls_/">Dylan</a></strong>, on bass.
-        <br><strong><a href="https://www.instagram.com/ethanpelser/?hl=en">Ethan</a></strong> on lead guitar
-        <br>and a drummer who seems to be taking his sweet ass time to join the party.
-        <br>Once upon a time there were some Bob Dylan fans <br> who decided that they wanted to make music.<br>
-        They found each other and started jamming.<br>
-        Music was made. <br>History was made
-      </p></td>
+      <td> <img
+          src="https://static.vecteezy.com/system/resources/previews/001/183/411/non_2x/skull-flower-decoration-vector.jpg";
+          alt="tithonia flower picture" height="250px"></td>
+      <td>
+        <h1>Tithonia</h1>
+        <p><em><a href="https://www.youtube.com/channel/UC-xwVzo2SY78gDS11nHiCMw">Song writer</a>,
+          <strong><a href="https://www.instagram.com/tithonia.band/">singer</a></strong> and rhythm <strong>guitar</strong> <a
+              href="https://www.youtube.com/watch?v=Is0YVJeB0DI">player</a></em></p>
+        <p> In a band with <strong><a href="https://www.instagram.com/_uncle_dyls_/">Dylan</a></strong>, on bass.
+          <br><strong><a href="https://www.instagram.com/ethanpelser/?hl=en">Ethan</a></strong> on lead guitar
+          <br>and a drummer who seems to be taking his sweet ass time to join the party.
+          <br>Once upon a time there were some Bob Dylan fans <br> who decided that they wanted to make music.<br>
+          They found each other and started jamming.<br>
+          Music was made. <br>History was made
+        </p>
+      </td>
     </tr>
   </table>
 
@@ -28,7 +35,7 @@
   <hr>
   </hr>
 
-  <h2>GALLERY</h2>
+  <h3>GALLERY</h3>
 
   <hr>
   <h3>PREVIOUS GIGS</h3>
@@ -54,10 +61,10 @@
       <tr>
 
 
-      <th>Instrument</th>
+        <th>Instrument</th>
 
-      <th>Name</th>
-        </tr>
+        <th>Name</th>
+      </tr>
     </thead>
 
     <tbody>
@@ -88,11 +95,11 @@
   <h2><a href="contact us.html">CONTACT US</a></h2>
   <br>
 
-<hr>
+  <hr>
 
-<h2><a href="song rating.html">RATE OUR SONGS</a></h2>
-<br>
-<hr>
+  <h2><a href="song rating.html">RATE OUR SONGS</a></h2>
+  <br>
+  <hr>
 </body>
 
 </html>
