--- a/song rating.html
+++ b/song rating.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>SONG RATING</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3>SONG RATING</h3>
