--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
 
   <br>
   <hr>
+  <h2><a href="Gallery.html">GALLERY</a></h2>
   </hr>
 
-  <h3>GALLERY</h3>
+
+  <br>
+
 
   <hr>
   <h3>PREVIOUS GIGS</h3>
