--- a/contact us.html
+++ b/contact us.html
@@ -9,10 +9,11 @@
 
 <body>
   <h1>OUR CONTACT INFO</h1>
-  <p>Catch us on instagram</p>
+  <p>INSTAGRAM</p>
   <p>BIANCA MARTHINUSEN: <a href="https://www.instagram.com/bmarthinusen/">THE DAMAGER:</a></p>
-  <p>THE BAND: <a href="https://www.instagram.com/tithonia.band/">"@tithonia.band"</a></p>
-  <p>Email: tithonia.band@gmail.com</p>
+  <p>THE BAND: <a href="https://www.instagram.com/tithonia.band/">@tithonia.band</a></p>
+  <p>FACEBOOK: <a href="https://www.facebook.com/TithoniaBand">Tithonia.band</a> </p>
+  <p>Email: <a href="mailto:tithonia.band@gmail.com">tithonia.band@gmail.com </a></p>
   <hr>
 
 
@@ -29,7 +30,7 @@
 <input type="submit" name="submit" value="submit"><br>
 
   </form>
-  <p><a href="index.html">🏡HOME</a></p>
+  <h3><a href="index.html">🏡HOME</a></h3>
 
 </body>
 
