--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <tr>
       <td> <img
           src="https://scontent.fcpt1-1.fna.fbcdn.net/v/t1.6435-9/107557598_2661397057463030_928978876208197866_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=e3f864&_nc_eui2=AeH7NW29kdaPDxyvTeVFwcUiNuld-NHrdDo26V340et0OlZ6m4sGjV_CyUo1_2ECzbs&_nc_ohc=o9jUpLxWetoAX-jAbPt&_nc_ht=scontent.fcpt1-1.fna&oh=5336d3fa1354be8b9d5f865d756b2693&oe=60C1E983";
-          alt="tithonia flower picture" height="250px"></td>
+          alt="tithonia flower picture" height="250px" class="round"></td>
       <td>
         <h1>Tithonia</h1>
         <p><em><a href="https://www.youtube.com/channel/UC-xwVzo2SY78gDS11nHiCMw">Song writer</a>,
