--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
   <hr>
-  <h3>PREVIOUS GIGS</h3>
+  <h3>PREVIOUS EVENTS</h3>
   <p>
   <ul>
     <li><a href="https://www.instagram.com/trenchtown_obz/?hl=en">Trenchtown</a></li>
