--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Tithonia the band</title>
-    <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -12,13 +12,12 @@
   <table cellspacing='30'>
     <tr>
       <td> <img
-          src="https://scontent.fcpt1-1.fna.fbcdn.net/v/t1.6435-9/107557598_2661397057463030_928978876208197866_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=e3f864&_nc_eui2=AeH7NW29kdaPDxyvTeVFwcUiNuld-NHrdDo26V340et0OlZ6m4sGjV_CyUo1_2ECzbs&_nc_ohc=o9jUpLxWetoAX-jAbPt&_nc_ht=scontent.fcpt1-1.fna&oh=5336d3fa1354be8b9d5f865d756b2693&oe=60C1E983";
-          alt="tithonia flower picture" height="250px" class="round"></td>
+          src="https://scontent.fcpt1-1.fna.fbcdn.net/v/t1.6435-9/107557598_2661397057463030_928978876208197866_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=e3f864&_nc_eui2=AeH7NW29kdaPDxyvTeVFwcUiNuld-NHrdDo26V340et0OlZ6m4sGjV_CyUo1_2ECzbs&_nc_ohc=o9jUpLxWetoAX-jAbPt&_nc_ht=scontent.fcpt1-1.fna&oh=5336d3fa1354be8b9d5f865d756b2693&oe=60C1E983"
+          ; alt="tithonia flower picture" height="250px" class="round"></td>
       <td>
         <h1>Tithonia</h1>
         <p><em><a href="https://www.youtube.com/channel/UC-xwVzo2SY78gDS11nHiCMw">Song writer</a>,
-          <strong><a href="https://www.instagram.com/tithonia.band/">singer</a></strong> and rhythm <strong>guitar</strong> <a
-              href="https://www.youtube.com/watch?v=Is0YVJeB0DI">player</a></em></p>
+            <strong><a href="https://www.instagram.com/tithonia.band/">singer</a></strong> and rhythm <strong>guitar</strong> <a href="https://www.youtube.com/watch?v=Is0YVJeB0DI">player</a></em></p>
         <p> In a band with <strong><a href="https://www.instagram.com/_uncle_dyls_/">Dylan</a></strong>, on bass.
           <br><strong><a href="https://www.instagram.com/ethanpelser/?hl=en">Ethan</a></strong> on lead guitar
           <br>and a drummer who seems to be taking his sweet ass time to join the party.
@@ -35,71 +34,20 @@
   <hr>
   <h2><a href="Gallery.html">GALLERY</a></h2>
   </hr>
-
-
-  <br>
-
-
-  <hr>
-  <h3>PREVIOUS EVENTS</h3>
-  <p>
-  <ul>
-    <li><a href="https://www.instagram.com/trenchtown_obz/?hl=en">Trenchtown</a></li>
-    <li>Sneaky Creeky</li>
-    <li>Longbeach Brewery</li>
-  </ul>
-  </p>
-  <hr>
-  <h3>FUTURE GIGS</h3>
-  <ol>
-    <li>30 May 2021 Trenchtown</li>
-    <li>Open Sesame</li>
-    <li>18 May 2021 House of Machines</li>
-    <li>Stellenbosch market</li>
-  </ol>
   <br>
   <hr>
-  <table>
-    <thead>
-      <tr>
-
-
-        <th>Instrument</th>
-
-        <th>Name</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <tr>
-
-        <td>Bass</td>
-        <td>Dylan Fourie</td>
-      </tr>
-      <tr>
-        <td>Rhythm guitar</td>
-        <td>Tithonia</td>
-      <tr>
-        <td>Lead guitar</td>
-        <td>Ethan</td>
-      </tr>
-      </tr>
-    </tbody>
-
-    <tfoot>
-
-    </tfoot>
-
-
-  </table>
+  <h2><a href="events.html">EVENTS</a></h2>
+  <br>
+  <hr>
+  <h2><a href="theband.html">THE BAND</a> </h2>
+  <br>
   <hr>
   <h2><a href="songlist.html">SONG LIST</a></h2>
   <hr>
+  <br>
   <h2><a href="contact us.html">CONTACT US</a></h2>
   <br>
-
   <hr>
-
   <h2><a href="song rating.html">RATE OUR SONGS</a></h2>
   <br>
   <hr>
