--- a/contact us.html
+++ b/contact us.html
@@ -9,11 +9,15 @@
 
 <body>
   <h1>OUR CONTACT INFO</h1>
-  <p>INSTAGRAM</p>
+    <p>INSTAGRAM <img src="https://www.kirupa.com/images/s/instagram.svg" alt="instagram icon" height="20px" class="icon"> </p>
   <p>BIANCA MARTHINUSEN: <a href="https://www.instagram.com/bmarthinusen/">THE DAMAGER:</a></p>
   <p>THE BAND: <a href="https://www.instagram.com/tithonia.band/">@tithonia.band</a></p>
-  <p>FACEBOOK: <a href="https://www.facebook.com/TithoniaBand">Tithonia.band</a> </p>
+  <p>FACEBOOK: <img src="https://www.kirupa.com/images/fb_svg.svg" alt="facebook icon" height="20px" class="icon"> <a href="https://www.facebook.com/TithoniaBand">Tithonia.band</a> </p>
   <p>Email: <a href="mailto:tithonia.band@gmail.com">tithonia.band@gmail.com </a></p>
+  <p>YouTube: <img src="https://www.kirupa.com/images/s/youtube.svg" alt="youtube icon" height="20px" class="icon" > <a href="https://www.youtube.com/channel/UC-xwVzo2SY78gDS11nHiCMw">
+    TithoniaBand
+  </a>
+  </p>
   <hr>
 
 
